完成观测域访问态势接口与前端呈现
